Checking the emptiness of binNames field before setting into command Minor code cleanup suggestion changes